--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ replit = "^3.2.4"
 urllib3 = "^1.26.12"
 fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
+websockets = "11.0.3"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
