--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.10.0,<3.11"
 fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
 websockets = "11.0.3"
+tinydb = "^4.8.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
